--- a/src/resume.handlebars
+++ b/src/resume.handlebars
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i|Quicksand:400,700" rel="stylesheet">
     <title>{{resume.basics.name}}</title>
     <link rel="stylesheet" type="text/css" href="style.css">
