--- a/src/style.css
+++ b/src/style.css
@@ -367,6 +367,12 @@ body {
   }
 }
 
+@media screen and (max-width: 1120px) and (max-device-width: 560px) {
+  html {
+    font-size: 2.2vw;
+  }
+}
+
 @media print {
   html {
     font-size: 2.5mm;
