Fixed translation of education

--- a/src/resume.handlebars
+++ b/src/resume.handlebars
@@ -145,9 +145,9 @@
                 <text x="12" y="17" text-anchor="middle" font-size="16">{{gpa}}</text>
               </svg>
               <div class="timeline-item-content">
-                <p class="red">Abgeschlossen im {{date}}</p>
-                <p>{{studyType}}&nbsp;{{area}} an der {{institution}}</p>
-                <p class="weak">Abschlussarbeit: {{thesis}}</p>
+                <p class="red">{{date}}</p>
+                <p>{{studyType}}&nbsp;{{area}} {{at}} {{institution}}</p>
+                <p class="weak">{{thesisLabel}}: {{thesis}}</p>
               </div>
             </li>
             {{/each}}
